2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_motion,
	  hd_home_view_applet_release, hd_home_view_restack_applets,
	  hd_home_view_move_applet): Implement proper moving of applets
	  between views. Fixes NB#88327, NB#95452, NB#96802

	* src/home/hd-home.c (hd_home_add_applet): Respect default value for
	  GConf view key.

	* debian/changelog: Update.

2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (move_applet_left_timeout_cb,
	  move_applet_right_timeout_cb, hd_home_view_applet_motion,
	  hd_home_view_applet_press, hd_home_view_applet_release): Implement
	  switching edges highlighting like in the Home UI Spec.

	* src/home/hd-home.c (_hd_home_do_normal_layout,
	  hd_home_show_switching_edges, hd_home_hide_switching_edges,
	  hd_home_highlight_switching_edges):
	* src/home/hd-home.h: Rename switching edges functions.

2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_motion,
	  hd_home_view_applet_press, hd_home_view_applet_release): Does not
	  allow applet to leave permitted area on drag in layout mode. Fixes
	  NB#88390

	* src/home/hd-home.c (hd_home_show_applet_buttons):
	* src/home/hd-home.h: Allow to call hd_home_show_applet_buttons()
	  multiple times with the same applet. Rewmove unused
	  hd_home_move_applet_buttons().

	* debian/changelog: Update.

2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c
	  (hd_home_view_container_update_previous_and_next_view,
	  hd_home_view_container_update_active_views, views_active_notify_func,
	  hd_home_view_container_constructed,
	  hd_home_view_container_set_current_view): Also update previous and
	  next view when active views but not current view changed.

2009-01-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_constructed): Add left and right switch
	to edit group. Fixes: NB#98209.
